Having issue where we are running out of Java memory...