@@ -7,4 +7,6 @@ RUN gem install s3_website
 
 COPY s3_website.yml /s3_website.yml
 
-ENTRYPOINT s3_website --config-dir / 
+ENV _JAVA_OPTIONS="-Xmx2g -XX:-UseConcMarkSweepGC"
+
+#ENTRYPOINT ["s3_website"] 
